reg page overflow fixed

--- a/client/src/compoentStyles/Registration.css
+++ b/client/src/compoentStyles/Registration.css
@@ -6,7 +6,8 @@
     height: 100vh;
     justify-content: center;
     align-items: center;
-    overflow: hidden;    
+    overflow-x: hidden;
+    position: relative;
 }
 
 
